--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,11 @@ body,
   -moz-osx-font-smoothing: grayscale;
 }
 
+main > section:first-child {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
 /* انیمیشن‌ها */
 @layer utilities {
   .animate-gradient-xy {
